# EDON

./: .gitignore  .gitmodules  CLAUDE.md  CONTRIBUTING.md  ENTERPRISE_READINESS.md  README.md  TODO.md  edon-pitch-deck.html
.claude/: settings.local.json
.github/: dependabot.yml
EdonLP/: PAYWALL_ENFORCEMENT.md  README.md  SITE_LAYOUT.md  STRIPE_REDIRECT.md  VERCEL_ENV_SETUP.md  VERCEL_ENV_TROUBLESHOOTING.md  index.html  package-lock.json  package.json  tailwind.config.ts  vercel.json  vite.config.ts
admin/: CLAUDE.md  index.html  package-lock.json  package.json  tailwind.config.ts
backend/: .env.example  CLAUDE.md  Dockerfile  PRODUCTION_READINESS_CHECKLIST.md  PRODUCTION_STATUS.md  README.md  alembic.ini  claw_connect.json  conftest.py  create_cj_key.py  demo_agent.py  dump_creds.py  edon_body.json  edon_gateway.db  fix_claw_creds.py  fly.edon-gatewaybk.toml  fly.edonclaw.toml  fly.toml  intent.json  intent_allowed_tools.json  intent_proxy.json  provision_credentials.ps1  pyrightconfig.json  pytest.ini  regression_out.txt  requirements.gateway.txt  requirements.txt  run_tests.sh  simulate_10_agents.py  simulate_adaptive.py  ui_preview.html
console/: CLAUDE.md  index.html  package-lock.json  package.json  vercel.json  vite.config.ts
contracts/: BAA.md  MSA_and_Order_Form.md  Security_and_Compliance.md  Technical_Integration_Guide.md
docs/: DECISION_KERNEL.md  EDON_FEATURES_INDEX.md  EDON_IMPACT.md  EDON_PLATFORM_OVERVIEW.md  EDON_PRICING_VALUE.md  api-reference.md  architecture.md  client-onboarding.md  (+4 more)
sdk/python/: pyproject.toml
sdk/python/edon_sdk/: __init__.py  _base_client.py  async_client.py  client.py  exceptions.py
sdk/python/tests/: test_client.py
(+676 files in other folders)
