[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "edon-sdk"
version = "0.1.0"
description = "Python client for the EDON AI Governance Gateway"
requires-python = ">=3.10"
dependencies = ["httpx>=0.27"]

[project.urls]
Homepage = "https://edoncore.com"
Documentation = "https://edoncore.com/docs"
