[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "edon-sdk"
version = "0.2.0"
description = "EDON runtime governance SDK — govern every AI agent action in real time"
readme = "../../sdk/README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "EDON", email = "hello@edoncore.com" }]
keywords = ["ai", "agents", "governance", "hipaa", "compliance", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "pytest-mock", "respx"]

[project.urls]
Homepage = "https://edoncore.com"
Documentation = "https://edon-gateway-prod.fly.dev/docs"
Repository = "https://github.com/edon-ai/edon-sdk"

[tool.hatch.build.targets.wheel]
packages = ["edon_sdk"]
